--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-syncopate: "Syncopate", "serif";
+}
