--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap");
 @import "tailwindcss";
 
 @theme {
   --font-syncopate: "Syncopate", "serif";
+  --font-funnelsans: "Funnel Sans", "serif";
+  --font-alumni: "Alumni Sans Pinstripe", "serif";
 }
